--- a/index.html
+++ b/index.html
@@ -118,9 +118,14 @@
         <div
             class="bg-white h-96 w-full border-2 border-gray-300 rounded-xl shadow-xl flex flex-col items-center gap-4 p-5 font-bold">
             <h3 class="vesper-libre-bold text-3xl text-gray-700"><span> < / </span>नेपाली पास्वर्ड जेनेरेटर <span> > </span></h3>
-            <div class="flex items-center mt-2 gap-10">
-            <div class="border-2 border-red-500 w-[20%] h-60">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati recusandae architecto ullam odio consequatur reprehenderit numquam culpa vero temporibus? Vitae eum commodi unde ratione repellendus consectetur vero consequatur quas neque.</p>
+            <div class="flex items-center mt-2 gap-10 w-full">
+            <div class="border-2 p-2 w-[20%] h-60">
+                <div class="w-full">
+                    <label for="">Generated Passwords</label>
+                    <div>
+                        <p></p>
+                    </div>
+                </div>
             </div>
             <div class="border-2 border-red-500 w-[35%] h-60" ></div>
             <div class="border-2 border-red-500 w-[45%] h-60"></div>    
