added script src

--- a/index.html
+++ b/index.html
@@ -128,11 +128,14 @@
                 </div>
             </div>
             <div class="border-2 border-red-500 w-[35%] h-60" ></div>
-            <div class="border-2 border-red-500 w-[45%] h-60"></div>    
+            <div class="border-2 border-red-500 w-[45%] h-60">
+                <button id="generate-button" class="bg-red-600 rounded-lg p-2 text-white">Generate</button>
+            </div>    
             </div>
             
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
