--- a/index.html
+++ b/index.html
@@ -1,200 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dominate Search: Your Ultimate Guide to [Target Keyword]</title>
+    <title>Premium Nepali Password Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-
-    <meta
-      name="description"
-      content="Unlock #1 rankings for [Target Keyword]. Expert strategies, advanced SEO, and actionable tactics to outrank competitors and drive organic traffic."
-    />
-    <meta
-      name="keywords"
-      content="[Target Keyword], advanced SEO, rank #1, organic traffic, search engine optimization, competitor analysis, technical SEO, content strategy, link building"
-    />
-    <meta name="author" content="Your Brand/Expert Name" />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://www.yourdomain.com/your-page-url" />
-
-    <meta
-      property="og:title"
-      content="Dominate Search: Your Ultimate Guide to [Target Keyword]"
-    />
-    <meta
-      property="og:description"
-      content="Unlock #1 rankings for [Target Keyword]. Advanced SEO strategies for maximum organic visibility."
-    />
-    <meta
-      property="og:image"
-      content="https://www.yourdomain.com/images/advanced-seo-image.jpg"
-    />
-    <meta
-      property="og:url"
-      content="https://www.yourdomain.com/your-page-url"
-    />
-    <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="Your Brand Name" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Dominate Search: Your Ultimate Guide to [Target Keyword]"
-    />
-    <meta
-      name="twitter:description"
-      content="Advanced SEO tactics to rank #1 for [Target Keyword]. Drive organic traffic and outrank competitors."
-    />
-    <meta
-      name="twitter:image"
-      content="https://www.yourdomain.com/images/twitter-advanced-seo-image.jpg"
-    />
-    <meta
-      name="twitter:url"
-      content="https://www.yourdomain.com/your-page-url"
-    />
-    <meta name="twitter:site" content="@YourBrandHandle" />
-    <meta name="twitter:creator" content="@YourBrandHandle" />
-
-    <meta
-      itemprop="name"
-      content="Dominate Search: Your Ultimate Guide to [Target Keyword]"
-    />
-    <meta
-      itemprop="description"
-      content="Advanced SEO strategies to achieve #1 rankings and dominate search results."
-    />
-    <meta
-      itemprop="image"
-      content="https://www.yourdomain.com/images/schema-advanced-seo-image.jpg"
-    />
-
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "mainEntityOfPage": {
-          "@type": "WebPage",
-          "@id": "https://www.yourdomain.com/your-page-url"
-        },
-        "headline": "Dominate Search: Your Ultimate Guide to [Target Keyword]",
-        "description": "Unlock #1 rankings for [Target Keyword]. Expert strategies, advanced SEO, and actionable tactics to outrank competitors and drive organic traffic.",
-        "image": [
-          "https://www.yourdomain.com/images/schema-advanced-seo-image.jpg"
-        ],
-        "author": {
-          "@type": "Person",
-          "name": "Your Brand/Expert Name"
-        },
-        "publisher": {
-          "@type": "Organization",
-          "name": "Your Brand Name",
-          "logo": {
-            "@type": "ImageObject",
-            "url": "https://www.yourdomain.com/images/logo.png"
-          }
-        },
-        "datePublished": "YYYY-MM-DD",
-        "dateModified": "YYYY-MM-DD",
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": {
-            "@type": "EntryPoint",
-            "urlTemplate": "https://www.yourdomain.com/search?q={search_term_string}"
-          },
-          "query-input": "required name=search_term_string"
-        }
-      }
-    </script>
-
-    <link
-      rel="alternate"
-      hreflang="en"
-      href="https://www.yourdomain.com/your-page-url"
-    />
-    <link
-      rel="alternate"
-      hreflang="es"
-      href="https://www.yourdomain.com/es/your-page-url"
-    />
-    <link rel="preconnect" href="https://www.yourdomain.com" />
-    <link rel="dns-prefetch" href="https://www.yourdomain.com" />
-    <link
-      rel="preload"
-      href="https://www.yourdomain.com/images/advanced-seo-image.jpg"
-      as="image"
-    />
-
+    <link href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
-      .vesper-libre-regular {
-        font-family: "Vesper Libre", serif;
-        font-weight: 400;
-        font-style: normal;
-      }
-
-      .vesper-libre-medium {
-        font-family: "Vesper Libre", serif;
-        font-weight: 500;
-        font-style: normal;
-      }
-
-      .vesper-libre-bold {
-        font-family: "Vesper Libre", serif;
-        font-weight: 700;
-        font-style: normal;
-      }
-
-      .vesper-libre-black {
-        font-family: "Vesper Libre", serif;
-        font-weight: 900;
-        font-style: normal;
-      }
+        body {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+        }
+        .vesper-libre-regular { font-family: "Vesper Libre", serif; font-weight: 400; font-style: normal; }
+        .vesper-libre-medium { font-family: "Vesper Libre", serif; font-weight: 500; font-style: normal; }
+        .vesper-libre-bold { font-family: "Vesper Libre", serif; font-weight: 700; font-style: normal; }
+        .vesper-libre-black { font-family: "Vesper Libre", serif; font-weight: 900; font-style: normal; }
     </style>
-  </head>
-
-  <body>
-    <div
-      class="flex items-center justify-center w-full h-screen gap-10 max-w-7xl mx-auto px-4"
-    >
-      <div
-        class="bg-white w-full border-2 border-gray-300 rounded-xl shadow-xl flex flex-col items-center gap-4 px-10 py-8 font-bold"
-      >
-        <h3 class="vesper-libre-bold text-3xl text-gray-700">
-          <span> < / </span>नेपाली पास्वर्ड जेनेरेटर <span> > </span>
-        </h3>
-        <div class="flex items-center mt-2 gap-10 w-full">
-          <div
-            class="flex flex-col items-center w-full h-auto gap-4 "
-          >
-            <div class="border-2 p-6 w-full h-24 rounded-xl bg-blue-900 flex items-center gap-4">
-                <div class="w-full">
-                    <input id="password"
-                  type="text"
-                  class="w-full h-full p-4 placeholder:font-semibold rounded-lg focus:outline-none"
-                  placeholder="यो तपाईको पास्वर्ड हो।"
-                  readonly
-                />
+</head>
+<body class="bg-gradient-to-r from-indigo-100 via-purple-100 to-pink-100 p-8">
+    <div class="flex items-center justify-center w-full min-h-screen max-w-7xl mx-auto px-4">
+        <div class="bg-white w-full border-2 border-gray-300 rounded-2xl shadow-2xl flex flex-col items-center gap-6 p-12 font-bold">
+            <h3 class="vesper-libre-bold text-4xl text-indigo-700 tracking-wide">
+                <span> < / </span>नेपाली पास्वर्ड जेनेरेटर <span> > </span>
+            </h3>
+            <div class="flex items-start mt-2 gap-10 w-full">
+                <div class="flex flex-col items-center w-full gap-6">
+                    <div class="w-full">
+                        <div class="border-2 p-6 rounded-xl bg-gradient-to-r from-blue-800 to-blue-900 flex items-center gap-4 shadow-md">
+                            <div class="w-full">
+                                <input id="password" type="text" class="w-full p-4 rounded-lg focus:outline-none text-white bg-transparent placeholder-gray-300" placeholder="यो तपाईको पास्वर्ड हो।" readonly />
+                            </div>
+                            <button onclick="copyToClipboard()" class="bg-green-600 text-white p-4 rounded-lg hover:bg-green-700 transition-colors duration-300 shadow-sm">
+                                <svg style="height: 24px; width:24px;color:white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="white" d="M320 64V0H112C85.5 0 64 21.5 64 48V464c0 26.5 21.5 48 48 48H368c26.5 0 48-21.5 48-48V128H352C334.3 128 320 113.7 320 96V64zM384 128V96 48c0-8.8-7.2-16-16-16H336v80h48zM128 480c-8.8 0-16-7.2-16-16V64c0-8.8 7.2-16 16-16H304V96c0 26.5 21.5 48 48 48h64V464c0 8.8-7.2 16-16 16H128z"/></svg>
+                            </button>
+                            <button onclick="generateNepaliPasswords()" class="bg-indigo-600 text-white p-4 rounded-lg hover:bg-indigo-700 transition-colors duration-300 shadow-sm"><svg style="height: 30px; width:30px;color:white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="white" d="M0 224c0 17.7 14.3 32 32 32s32-14.3 32-32c0-53 43-96 96-96l160 0 0 32c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l64-64c12.5-12.5 12.5-32.8 0-45.3l-64-64c-9.2-9.2-22.9-11.9-34.9-6.9S320 19.1 320 32l0 32L160 64C71.6 64 0 135.6 0 224zm512 64c0-17.7-14.3-32-32-32s-32 14.3-32 32c0 53-43 96-96 96l-160 0 0-32c0-12.9-7.8-24.6-19.8-29.6s-25.7-2.2-34.9 6.9l-64 64c-12.5 12.5-12.5 32.8 0 45.3l64 64c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6l0-32 160 0c88.4 0 160-71.6 160-160z"/></svg></button>
+                        </div>
+                    </div>
+                    <div class="border-2 p-4 w-full rounded-xl overflow-y-auto max-h-96 shadow-inner">
+                        <div id="passwordList" class="flex flex-col gap-3">
+                            <img src="ad.png" style="width: auto; height: 250px;" alt="">
+                        </div>
+                    </div>
                 </div>
-                
-                <button onclick="generateNepaliPasswords()" class="bg-blue-600 text-white p-4 rounded-lg w-1/2 hover:scale-105 transition-all duration-300 ease-in-out ">
-                    जेनेरेट 
-                </button>
-              
+                <div class="w-[45%] p-6 rounded-xl bg-gray-50 shadow-lg">
+                    <div class="flex flex-col gap-6">
+                        <div>
+                            <label class="block text-gray-700 text-sm font-bold mb-2">Password Length (<span id="lengthValue">16</span>)</label>
+                            <input type="range" id="lengthSlider" min="8" max="32" value="16" class="w-full appearance-none h-2 bg-indigo-200 rounded-full outline-none cursor-pointer">
+                        </div>
+                        <div>
+                            <label class="block text-gray-700 text-sm font-bold mb-2">Number of Passwords (<span id="countValue">10</span>)</label>
+                            <input type="range" id="countSlider" min="1" max="20" value="10" class="w-full appearance-none h-2 bg-indigo-200 rounded-full outline-none cursor-pointer">
+                        </div>
+                        <div>
+                            <label class="block text-gray-700 text-sm font-bold mb-3">Character Sets</label>
+                            <div class="grid grid-cols-2 gap-3">
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="nepaliCharsCheckbox" class="form-checkbox h-5 w-5 text-indigo-600" checked><span class="ml-2 text-gray-700 text-sm">Nepali Chars</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="nepaliSymbolsCheckbox" class="form-checkbox h-5 w-5 text-indigo-600"><span class="ml-2 text-gray-700 text-sm">Nepali Symbols</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="englishCharsCheckbox" class="form-checkbox h-5 w-5 text-indigo-600" checked><span class="ml-2 text-gray-700 text-sm">English Lower</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="englishCharsUpperCheckbox" class="form-checkbox h-5 w-5 text-indigo-600" checked><span class="ml-2 text-gray-700 text-sm">English Upper</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="englishNumbersCheckbox" class="form-checkbox h-5 w-5 text-indigo-600" checked><span class="ml-2 text-gray-700 text-sm">English Numbers</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="englishSpecialCharsCheckbox" class="form-checkbox h-5 w-5 text-indigo-600" checked><span class="ml-2 text-gray-700 text-sm">English Special</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="nepaliVowelsCheckbox" class="form-checkbox h-5 w-5 text-indigo-600"><span class="ml-2 text-gray-700 text-sm">Nepali Vowels</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="nepaliConsonantsCheckbox" class="form-checkbox h-5 w-5 text-indigo-600"><span class="ml-2 text-gray-700 text-sm">Nepali Consonants</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="nepaliNumbersCheckbox" class="form-checkbox h-5 w-5 text-indigo-600"><span class="ml-2 text-gray-700 text-sm">Nepali Numbers</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="nepaliSpecialCharsCheckbox" class="form-checkbox h-5 w-5 text-indigo-600"><span class="ml-2 text-gray-700 text-sm">Nepali Special</span>
+                                </label>
+                                <label class="flex items-center">
+                                    <input type="checkbox" id="ranjanalipiCheckbox" class="form-checkbox h-5 w-5 text-indigo-600"><span class="ml-2 text-gray-700 text-sm">Ranjana Lipi</span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="border-2 p-2 w-full h-60 rounded-lg"></div>
-          </div>
-          <div class="border-2 border-red-500 w-[45%] h-60"></div>
         </div>
-      </div>
     </div>
     <script src="index.js"></script>
-  </body>
+</body>
 </html>
