--- a/index.html
+++ b/index.html
@@ -3,13 +3,47 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Premium Nepali Password Generator</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <meta name="description" content="Generate strong and secure Nepali passwords instantly with our advanced Nepali Password Generator. Ensure high security with customizable options including Nepali, English, and special characters." />
+    <meta name="keywords" content="Nepali Password Generator, Secure Passwords, Strong Passwords, Random Password Generator, Free Password Generator, Safe Passwords, Online Password Maker" />
+    <meta name="author" content="Your Website Name" />
+    <meta property="og:title" content="Premium Nepali Password Generator" />
+    <meta property="og:description" content="Create strong and unique Nepali passwords effortlessly with our free online generator. Secure your accounts with high-strength passwords today!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nepalipasswordgen.brassdev.com" />
+    <meta property="og:image" content="https://nepalipasswordgen.brassdev.com/password-generator-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Premium Nepali Password Generator" />
+    <meta name="twitter:description" content="Generate secure and unique Nepali passwords instantly with customizable options!" />
+    <meta name="twitter:image" content="https://nepalipasswordgen.brassdev.com/password-generator-image.png" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "SoftwareApplication",
+            "name": "Premium Nepali Password Generator",
+            "description": "Generate secure and unique Nepali passwords instantly with customizable options!",
+            "applicationCategory": "Utility",
+            "operatingSystem": "All",
+            "offers": {
+                "@type": "Offer",
+                "price": "0",
+                "priceCurrency": "NPR"
+            },
+            "potentialAction": {
+                "@type": "PasswordGenerationAction",
+                "name": "Generate a Secure Password",
+                "target": {
+                    "@type": "EntryPoint",
+                    "urlTemplate": "https://nepalipasswordgen.brassdev.com/api/generate-password",
+                    "actionPlatform": [
+                        "http://schema.org/DesktopWebPlatform",
+                        "http://schema.org/MobileWebPlatform"
+                    ]
+                }
+            }
+        }
+        </script>
     <style>
         body {
             margin: 0;
